chore(logging): migrate all logger statements with throwables to SLF4J fluent API